bindings/c/include/proven.h

/* ============================================================================
 * Status Codes
 * ============================================================================ */

/**
 * @brief Status codes returned by Proven operations.
 *
 * Zero indicates success; negative values indicate specific error conditions.
 */
typedef enum {
    PROVEN_OK                      =   0,
    PROVEN_ERR_NULL_POINTER        =  -1,
    PROVEN_ERR_INVALID_ARGUMENT    =  -2,
    PROVEN_ERR_OVERFLOW            =  -3,
    PROVEN_ERR_UNDERFLOW           =  -4,
    PROVEN_ERR_DIVISION_BY_ZERO    =  -5,
    PROVEN_ERR_PARSE_FAILURE       =  -6,
    PROVEN_ERR_VALIDATION_FAILED   =  -7,
    PROVEN_ERR_OUT_OF_BOUNDS       =  -8,
    PROVEN_ERR_ENCODING_ERROR      =  -9,
    PROVEN_ERR_ALLOCATION_FAILED   = -10,
    PROVEN_ERR_NOT_IMPLEMENTED     = -99
} ProvenStatus;
/* ============================================================================
 * Core Result Types
 * ============================================================================ */

/** @brief Result for integer operations */
typedef struct { int32_t status; int64_t value; } ProvenIntResult;
/** @brief Result for boolean operations */
typedef struct { int32_t status; bool value; } ProvenBoolResult;
/**
 * @brief Result for string operations.
 * @note Caller must free value using proven_free_string().
 */
typedef struct { int32_t status; char* value; size_t length; } ProvenStringResult;
/** @brief Result for floating-point operations */
typedef struct { int32_t status; double value; } ProvenFloatResult;
/* ============================================================================
 * SafeHeader - HTTP header safety (6 functions)
 * ============================================================================ */

/**
 * @brief Check for CRLF injection characters in header value.
 * @return Result with detection status (true = CRLF found).
 */
ProvenBoolResult proven_header_has_crlf(const uint8_t* ptr, size_t len);
/**
 * @brief Check if header name is a valid token per RFC 7230.
 * @return Result with validation status.
 */
ProvenBoolResult proven_header_is_valid_name(const uint8_t* ptr, size_t len);
/**
 * @brief Check if header name is in the dangerous headers list.
 * @return Result with detection status (true = dangerous).
 */
ProvenBoolResult proven_header_is_dangerous(const uint8_t* ptr, size_t len);
/**
 * @brief Create validated header string "Name: Value".
 * @return Result with rendered header (caller must free).
 */
ProvenStringResult proven_header_render(
    const uint8_t* name_ptr, size_t name_len,
    const uint8_t* value_ptr, size_t value_len
);
/**
 * @brief Build Content-Security-Policy header value from JSON directives.
 * @param directives_json JSON-encoded CSP directives.
 * @param json_len Length of JSON string.
 * @return Result with CSP header value (caller must free).
 */
ProvenStringResult proven_header_build_csp(const uint8_t* directives_json, size_t json_len);
/**
 * @brief Build HSTS header value.
 * @param max_age Max-Age directive in seconds.
 * @param include_subdomains Whether to include includeSubDomains.
 * @param preload Whether to include preload directive.
 * @return Result with HSTS header value (caller must free).
 */
ProvenStringResult proven_header_build_hsts(int64_t max_age, bool include_subdomains, bool preload);
/**
 * @brief Check for cookie injection characters (semicolon, CR, LF).
 * @return Result with detection status (true = injection found).
 */
ProvenBoolResult proven_cookie_has_injection(const uint8_t* ptr, size_t len);
/**
 * @brief Validate cookie name.
 * @return Result with validation status.
 */
ProvenBoolResult proven_cookie_validate_name(const uint8_t* ptr, size_t len);
/**
 * @brief Validate cookie value.
 * @return Result with validation status.
 */
ProvenBoolResult proven_cookie_validate_value(const uint8_t* ptr, size_t len);
/**
 * @brief Get cookie prefix type.
 * @return Result with prefix type: 0=none, 1=__Secure-, 2=__Host-.
 */
ProvenIntResult proven_cookie_get_prefix(const uint8_t* ptr, size_t len);
/**
 * @brief Build delete cookie header value (sets expiry in the past).
 * @return Result with Set-Cookie value (caller must free).
 */
ProvenStringResult proven_cookie_build_delete(const uint8_t* name_ptr, size_t name_len);
/* ============================================================================
 * SafeCurrency - Monetary values with ISO 4217 codes (2 functions)
 * ============================================================================ */

/** @brief Currency parse result with minor units. */
typedef struct {
    int32_t  status;
    int64_t  amount_minor;     /**< Amount in minor units (cents, etc.) */
    uint8_t  currency_code[3]; /**< 3-letter ISO 4217 code */
    uint8_t  decimal_places;
} ProvenCurrencyResult;
/**
 * @brief Parse currency amount (e.g., "USD 123.45" or "123.45 EUR").
 * @return Result with parsed currency.
 */
ProvenCurrencyResult proven_currency_parse(const uint8_t* ptr, size_t len);
/**
 * @brief Format currency amount.
 * @param amount_minor Amount in minor units.
 * @param code 3-letter ISO 4217 currency code.
 * @param decimal_places Number of decimal places for the currency.
 * @return Result with formatted string (caller must free).
 */
ProvenStringResult proven_currency_format(int64_t amount_minor, uint8_t code[3], uint8_t decimal_places);
/* ============================================================================
 * SafePhone - E.164 phone number handling (2 functions)
 * ============================================================================ */

/** @brief Phone number parse result. */
typedef struct {
    int32_t  status;
    uint16_t country_code;
    uint64_t national_number;
    bool     is_valid;
} ProvenPhoneResult;
/**
 * @brief Parse phone number to E.164 format.
 * @return Result with parsed phone number.
 */
ProvenPhoneResult proven_phone_parse(const uint8_t* ptr, size_t len);
/**
 * @brief Format phone number as E.164 string.
 * @param country_code Numeric country calling code.
 * @param national_number National number digits.
 * @return Result with formatted string (caller must free).
 */
ProvenStringResult proven_phone_format_e164(uint16_t country_code, uint64_t national_number);
/* ============================================================================
 * SafeGeo - Geographic coordinate operations (3 functions)
 * ============================================================================ */

/** @brief Geographic coordinate. */
typedef struct {
    double latitude;   /**< -90 to 90 */
    double longitude;  /**< -180 to 180 */
} ProvenGeoCoordinate;
/** @brief Geo validation result. */
typedef struct {
    int32_t            status;
    ProvenGeoCoordinate coordinate;
} ProvenGeoResult;
/**
 * @brief Validate and normalize geographic coordinate.
 * @return Result with validated coordinate.
 */
ProvenGeoResult proven_geo_validate(double lat, double lon);
/**
 * @brief Calculate distance between two points (Haversine formula).
 * @return Result with distance in meters.
 */
ProvenFloatResult proven_geo_distance(ProvenGeoCoordinate a, ProvenGeoCoordinate b);
/* ============================================================================
 * SafeProbability - Probability values clamped to [0, 1] (4 functions)
 * ============================================================================ */

/**
 * @brief Create probability value (clamped to [0, 1]).
 * @return Clamped probability.
 */
double proven_probability_create(double value);
/**
 * @brief Multiply probabilities (independent events: P(A and B) = P(A) * P(B)).
 * @return Product probability.
 */
double proven_probability_and(double a, double b);
/**
 * @brief Add probabilities (mutually exclusive events: P(A or B) = P(A) + P(B)).
 * @return Sum probability (clamped to 1.0).
 */
double proven_probability_or_exclusive(double a, double b);
/**
 * @brief Complement probability (P(not A) = 1 - P(A)).
 * @return Complement probability.
 */
double proven_probability_not(double p);
/* ============================================================================
 * SafeCalculator - Safe expression evaluation (1 function)
 * ============================================================================ */

/**
 * @brief Evaluate an arithmetic expression safely.
 *
 * Supports +, -, *, /, parentheses, negative and decimal numbers.
 * Returns PROVEN_ERR_PARSE_FAILURE for invalid expressions.
 * Returns PROVEN_ERR_DIVISION_BY_ZERO for division by zero.
 */
ProvenFloatResult proven_calculator_eval(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeMl - Machine learning activation functions (5 functions)
 * ============================================================================ */

/**
 * @brief Softmax normalization over an array.
 * @param input Input array of doubles.
 * @param output Output array (same size as input).
 * @param len Length of arrays.
 * @return Status code.
 */
ProvenStatus proven_ml_softmax(const double* input, double* output, size_t len);
/** @brief Sigmoid function: 1 / (1 + exp(-x)). */
double proven_ml_sigmoid(double x);
/** @brief ReLU function: max(0, x). */
double proven_ml_relu(double x);
/** @brief Leaky ReLU: x >= 0 ? x : alpha * x. */
double proven_ml_leaky_relu(double x, double alpha);
/** @brief Clamp value to [min_val, max_val]. */
double proven_ml_clamp(double x, double min_val, double max_val);
/* ============================================================================
 * SafeHttp - HTTP URL encoding and header parsing (3 functions)
 * ============================================================================ */

/**
 * @brief URL-encode a string (RFC 3986 percent encoding).
 *
 * Unreserved chars (A-Za-z0-9-._~) pass through; others become %XX.
 * @return Result with encoded string (caller must free).
 */
ProvenStringResult proven_http_url_encode(const uint8_t* ptr, size_t len);
/**
 * @brief URL-decode a percent-encoded string.
 * @return Result with decoded string (caller must free).
 */
ProvenStringResult proven_http_url_decode(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeColor - Color space conversions (3 functions)
 * ============================================================================ */

/** @brief RGB color (8-bit per channel). */
typedef struct { uint8_t r; uint8_t g; uint8_t b; } ProvenRGBColor;
/** @brief Color parse result. */
typedef struct {
    int32_t       status;
    ProvenRGBColor color;
} ProvenColorResult;
/**
 * @brief Parse hex color string (#RRGGBB or #RGB).
 *
 * Leading # is optional.
 */
ProvenColorResult proven_color_parse_hex(const uint8_t* ptr, size_t len);
/**
 * @brief Format RGB as hex string ("#rrggbb", lowercase).
 * @return Result with hex string (caller must free).
 */
ProvenStringResult proven_color_to_hex(ProvenRGBColor rgb);
/* ============================================================================
 * SafeAngle - Angle conversions and normalization (4 functions)
 * ============================================================================ */

/** @brief Convert degrees to radians. */
double proven_angle_deg_to_rad(double degrees);
/** @brief Convert radians to degrees. */
double proven_angle_rad_to_deg(double radians);
/** @brief Normalize angle to [0, 360) degrees. Returns 0 for NaN. */
double proven_angle_normalize_degrees(double degrees);
/** @brief Normalize angle to [0, 2*pi) radians. Returns 0 for NaN. */
double proven_angle_normalize_radians(double radians);
/* ============================================================================
 * SafeUnit - Physical unit conversions (2 functions)
 * ============================================================================ */

/** @brief Length units. */
typedef enum {
    PROVEN_LENGTH_METERS      = 0,
    PROVEN_LENGTH_KILOMETERS  = 1,
    PROVEN_LENGTH_CENTIMETERS = 2,
    PROVEN_LENGTH_MILLIMETERS = 3,
    PROVEN_LENGTH_FEET        = 4,
    PROVEN_LENGTH_INCHES      = 5,
    PROVEN_LENGTH_MILES       = 6,
    PROVEN_LENGTH_YARDS       = 7
} ProvenLengthUnit;
/** @brief Temperature units. */
typedef enum {
    PROVEN_TEMP_CELSIUS    = 0,
    PROVEN_TEMP_FAHRENHEIT = 1,
    PROVEN_TEMP_KELVIN     = 2
} ProvenTempUnit;
/**
 * @brief Convert length between units.
 * @return PROVEN_ERR_INVALID_ARGUMENT for NaN input.
 */
ProvenFloatResult proven_unit_convert_length(double value, ProvenLengthUnit from, ProvenLengthUnit to);
/**
 * @brief Convert temperature between units.
 * @return PROVEN_ERR_OUT_OF_BOUNDS for temperatures below absolute zero.
 */
ProvenFloatResult proven_unit_convert_temp(double value, ProvenTempUnit from, ProvenTempUnit to);