bindings/csharp/src/Proven/LibProven.cs


        /// <summary>Parse hex color string (#RRGGBB or #RGB).</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr proven_color_parse_hex(byte[] ptr, nuint len);

        /// <summary>Format RGB as hex string. Caller must free result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern StringResult proven_color_to_hex(byte r, byte g, byte b);

        // --------------------------------------------------------------------
        // SafeCalculator (1 function)
        // --------------------------------------------------------------------

        /// <summary>Evaluate an arithmetic expression safely.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FloatResult proven_calculator_eval(byte[] ptr, nuint len);

        // --------------------------------------------------------------------
        // SafeHttp (2 functions)
        // --------------------------------------------------------------------

        /// <summary>URL-encode a string (RFC 3986 percent encoding). Caller must free result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern StringResult proven_http_url_encode(byte[] ptr, nuint len);

        /// <summary>URL-decode a percent-encoded string. Caller must free result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern StringResult proven_http_url_decode(byte[] ptr, nuint len);

        // --------------------------------------------------------------------
        // SafePhone (2 functions)
        // --------------------------------------------------------------------

        /// <summary>Parse phone number to E.164 format.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr proven_phone_parse(byte[] ptr, nuint len);

        /// <summary>Format phone number as E.164 string. Caller must free result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern StringResult proven_phone_format_e164(ushort countryCode, ulong nationalNumber);

        // --------------------------------------------------------------------
        // SafeCurrency (2 functions)
        // --------------------------------------------------------------------

        /// <summary>Parse currency amount.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr proven_currency_parse(byte[] ptr, nuint len);

        /// <summary>Format currency amount. Caller must free result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern StringResult proven_currency_format(long amountMinor, byte[] code, byte decimalPlaces);

        // --------------------------------------------------------------------
        // SafeAngle (4 functions)
        // --------------------------------------------------------------------

        /// <summary>Convert degrees to radians.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double proven_angle_deg_to_rad(double degrees);

        /// <summary>Convert radians to degrees.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double proven_angle_rad_to_deg(double radians);

        /// <summary>Normalize angle to [0, 360) degrees.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double proven_angle_normalize_degrees(double degrees);

        /// <summary>Normalize angle to [0, 2*pi) radians.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double proven_angle_normalize_radians(double radians);

        // --------------------------------------------------------------------
        // SafeProbability (4 functions)
        // --------------------------------------------------------------------

        /// <summary>Create probability value (clamped to [0, 1]).</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double proven_probability_create(double value);

        /// <summary>Multiply probabilities (independent events).</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double proven_probability_and(double a, double b);

        /// <summary>Add probabilities (mutually exclusive events).</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double proven_probability_or_exclusive(double a, double b);

        /// <summary>Complement probability.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double proven_probability_not(double p);

        // --------------------------------------------------------------------
        // SafeGeo (3 functions)
        // --------------------------------------------------------------------

        /// <summary>Validate and normalize geographic coordinate.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr proven_geo_validate(double lat, double lon);

        /// <summary>Calculate distance between two points (Haversine, in metres).</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FloatResult proven_geo_distance(
            double lat1, double lon1,
            double lat2, double lon2);

        // --------------------------------------------------------------------
        // SafeHeader (6 functions)
        // --------------------------------------------------------------------

        /// <summary>Check for CRLF injection characters in header value.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern BoolResult proven_header_has_crlf(byte[] ptr, nuint len);

        /// <summary>Check if header name is a valid token per RFC 7230.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern BoolResult proven_header_is_valid_name(byte[] ptr, nuint len);

        /// <summary>Check if header name is dangerous.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern BoolResult proven_header_is_dangerous(byte[] ptr, nuint len);

        /// <summary>Create validated header string "Name: Value". Caller must free result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern StringResult proven_header_render(
            byte[] namePtr, nuint nameLen,
            byte[] valuePtr, nuint valueLen);

        /// <summary>Build CSP header value from JSON directives. Caller must free result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern StringResult proven_header_build_csp(byte[] directivesJson, nuint jsonLen);

        /// <summary>Build HSTS header value. Caller must free result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern StringResult proven_header_build_hsts(
            long maxAge,
            [MarshalAs(UnmanagedType.U1)] bool includeSubdomains,
            [MarshalAs(UnmanagedType.U1)] bool preload);

        // --------------------------------------------------------------------
        // SafeCookie (6 functions)
        // --------------------------------------------------------------------

        /// <summary>Check for cookie injection characters.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern BoolResult proven_cookie_has_injection(byte[] ptr, nuint len);

        /// <summary>Validate cookie name.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern BoolResult proven_cookie_validate_name(byte[] ptr, nuint len);

        /// <summary>Validate cookie value.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern BoolResult proven_cookie_validate_value(byte[] ptr, nuint len);

        /// <summary>Get cookie prefix type.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntResult proven_cookie_get_prefix(byte[] ptr, nuint len);

        /// <summary>Build Set-Cookie header value. Caller must free result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern StringResult proven_cookie_build_delete(byte[] namePtr, nuint nameLen);

        // --------------------------------------------------------------------
        // SafeML (5 functions)
        // --------------------------------------------------------------------

        /// <summary>Sigmoid function: 1 / (1 + exp(-x)).</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double proven_ml_sigmoid(double x);

        /// <summary>ReLU function: max(0, x).</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double proven_ml_relu(double x);

        /// <summary>Leaky ReLU: x >= 0 ? x : alpha * x.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double proven_ml_leaky_relu(double x, double alpha);

        /// <summary>Clamp value to [minVal, maxVal].</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern double proven_ml_clamp(double x, double minVal, double maxVal);

        /// <summary>Softmax normalization over an array.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int proven_ml_softmax(double[] input, double[] output, nuint len);

        // --------------------------------------------------------------------
        // SafeUnit (2 functions)
        // --------------------------------------------------------------------

        /// <summary>Convert length between units.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FloatResult proven_unit_convert_length(double value, int from, int to);

        /// <summary>Convert temperature between units.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FloatResult proven_unit_convert_temp(double value, int from, int to);
    }

    // ========================================================================
    // Internal Marshaling Helpers
    // ========================================================================

    /// <summary>
    /// Internal helper methods for marshaling between .NET managed types and
    /// the C ABI used by libproven. Not intended for direct external use.
    /// </summary>
    internal static class MarshalHelpers
    {
        /// <summary>
        /// Convert a .NET string to a UTF-8 byte array for passing to FFI.
        /// </summary>
        /// <param name="s">The string to encode.</param>
        /// <returns>UTF-8 encoded byte array.</returns>
        public static byte[] ToUtf8(string s)
        {
            return System.Text.Encoding.UTF8.GetBytes(s);
        }
